[package]
name = "jsonatr"
version = "0.1.0"
authors = ["Andrey Kuprianov <andrey@informal.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }